--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 async-trait = "0.1.89"
 serde = "1.0.228"
 serde_json = "1.0.149"
-tokio = "1.49.0"
+tokio = {version ="1.49.0", features = ["full"]}
