--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
-serde = "1.0.228"
+concat-idents = "1.1.5"
+serde = {version = "1.0.228", features = ["derive", "rc"]}
 serde_json = "1.0.149"
 tokio = {version ="1.49.0", features = ["full"]}
