--- a/dos/Cargo.toml
+++ b/dos/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-raylib = "5.5.1"
+raylib = {version = "5.5.1", features = ["with_serde"]}
 rmp-serde = "1.3.1"
 serde = {version = "1.0.228", features = ["derive", "rc"]}
 [profile.release]
